public/style.css
body {
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;

	overflow: hidden;
}

a {
	color: black;
	text-decoration: none;
}

a:visited {
	color: black;
}

a:active {
	color: black;
}

a:hover {
	cursor: pointer;
}



.shadow {
	position: fixed;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	pointer-events: none;
	display: flex;
	justify-content: center;
	align-items: center;
	background: rgba(255, 255, 255, 0.7);
	opacity: 0;

	-webkit-transition: opacity 0.4s ease-in-out;
	-moz-transition: opacity 0.4s ease-in-out;
	transition: opacity 0.4s ease-in-out;
}

.shadow > div {
	position: relative;
	/*display: flex;
	justify-content: center;
	align-items: center;
	flex-direction: column;*/
	min-width: 300px;
	min-height: calc(300px * 0.8);
	background: url('scroll.png') no-repeat;
	background-size: cover;
}

.shadow > div img {
	width: 50px;
	height: 50px;
	position: absolute;
	top: 30%;
	left: 50%;
	transform: translate(-50%, -50%);
}

.shadow > div p {
	position: absolute;
	top: 50%;
	text-align: center;
	transform: translateY(-50%);
	width: 100%;
}

.shadow > div p span {
	margin-left: 10px;
}

.shadow #shadow-buttons {
	width: 60%;
	position: absolute;
	bottom: 15%;
	left: 50%;
	transform: translate(-50%, -50%);
}

.shadow > div a {
	display: block;
	color: white;
	text-decoration: none;
	float: right;
}

.shadow > div a:first-child {
	float: left;
}



.shadow > div a:active {
	color: white;
}

.shadow > div a:visited {
	color: white;
}


.shadow > div a {
	padding: 10px;
  box-sizing: border-box;
	background: #951F1E;
	border-radius: 10%;
	background-size: cover;
}

.shadow > div a:hover {
	background: white;
	color: #951F1E;
}

.shadow #close {
	position: absolute;
	top: 5%;
	right: 5%;
}

.visible {
	opacity: 1;
	pointer-events: all;
}


#gamefield-container {
	position: relative;
	width: calc(100vw - 600px);
	height: calc(100vh - 56px);
	float: left;
	overflow: auto;
	box-sizing: border-box;
}

#gamefield-container {
	position: relative;
	width: calc(100vw - 600px);
	height: calc(100vh - 56px);
	float: left;
	overflow: auto;
	box-sizing: border-box;
}

#gameField {
	position: absolute;
  width: 1000px;
}

#rogue-container {
	width: 100vw;
	height: 100vh;
	overflow: hidden;
}

/* div which shows players health and etc */

#player-state {
	position: absolute;
	top: 5%;
	left: 5%;
}

#player-state .bar {
	width: 100px;
	height: 10px;
	padding: 3px;
}

#player-state .bar div {
	height: 100%;
}

.bar.health {
	border: 3px solid red;
}

.bar.health div {
	background: red;
}

.bar.experience {
	border: 3px solid gold;
}

.bar.experience div {
	background: gold;
}


header {
	padding: 20px;
	background: #232323;
	color: white;
	/*border: 1px solid white;*/
}

header li {
	margin-left: 10px;
	display: inline;
}

header button {
	float: right;
}

aside {
  float: left;
  width: 300px;
  height: calc(100vh - 56px);
  box-sizing: border-box;
  /*border: 2px solid black;*/
	background: #232323;
	color: white;

	-webkit-transition: width 1s ease-in-out;
	-moz-transition: width 1s ease-in-out;
	transition: width 1s ease-in-out;
	overflow-y: auto;
}

aside.opened {
	width: 250px;
}

#aside-open {
	position: fixed;
	right: 0;
	top: 50%;
}

/* player items */

#player-items {
	margin: 0 auto;
	width: 250px;
}

#player-items .droppable{
	width: 40px;
	height: 40px;
	margin: 10px;
	border: 2px solid white;
	display: flex;
	justify-content: center;
  align-items: center;
}

#player-items .items-flex {
	display: flex;
	justify-content: space-around;
}

#player-items .helmet.droppable {
	background-image: url('backpackCell.png');
	background-size: contain;
	margin: 10px auto;
}

#player-items .necklace.droppable {
	background-image: url('backpackCell.png');
	background-size: contain;
	margin: 10px auto;
}

#player-items .bracers.droppable {
	background-image: url('backpackCell.png');
	background-size: contain;
}

#player-items .armor.droppable {
	background-image: url('backpackCell.png');
	background-size: contain;
}

#player-items .sword.droppable {
	background-image: url('backpackCell.png');
	background-size: contain;
}

#player-items .shield.droppable {
	background-image: url('backpackCell.png');
	background-size: contain;
}

#player-items .ring.droppable {
	background-image: url('backpackCell.png');
	background-size: contain;
}

#player-items .daggers.droppable {
	background-image: url('backpackCell.png');
	background-size: contain;
}


#player-items .pants.droppable {
	background-image: url('backpackCell.png');
	background-size: contain;
	margin: 10px auto;
}

#player-items .leg-armor.droppable {
	background-image: url('backpackCell.png');
	background-size: contain;
	margin: 10px auto;
}

.appropriate-item {
	-webkit-box-shadow: 2px 2px 28px 7px rgba(255,255,255,1);
	-moz-box-shadow: 2px 2px 28px 7px rgba(255,255,255,1);
	box-shadow: 2px 2px 28px 7px rgba(255,255,255,1);
}

/*  Backpack   */

#backpack {

	width: 200px;
  display: flex;
  flex-wrap: wrap;
  margin: 0 auto;
	margin-top: 20px;
}

#backpack > * {
	width: 50px;
	height: 50px;
	display: flex;
	justify-content: center;
	align-items: center;
	background-image: url('backpackCell.png');
	background-size: cover;
}

.draggable:hover {
	cursor: pointer;
}


img.draggable {
	width: 30px;
	height: 30px;
}




.log-info, .messages {
	width: 300px;
	height: calc(100vh - 56px);
	overflow: auto;
	box-sizing: border-box;
	text-align: center;
	float: left;
	background: #232323;
}

.log-info, .messages p {
	padding: 10px;
}


.cell {
  width: 25px;

	padding-top: 25px;
  float: left;

	background-repeat: no-repeat;
	background-attachment: fixed;
  background-position: center !important;
	background-size: cover !important;

}

  .player {
		background: url('wizard-face.png'), url('tile123.png');
	}

	.player.basement {
		background: url('wizard-face.png'), url('second-ground.png');
	}

	.player.dungeon {
		background: url('wizard-face.png'), url('dungeon-ground.png');
	}

  .enemy {
    background-size: contain;
		background: url('griffin-symbol.png'), url('tile123.png');
  }

	.enemy.basement {
		background: url('second-enemy.png'), url('second-ground.png');
	}

	.enemy.dungeon {
		background: url('griffin-symbol.png'), url('dungeon-ground.png');
	}

  .wall {
    background: url('tile106.png')
  }

	.wall.basement {
		background: url('second-wall.jpg');
	}

	.wall.dungeon {
		background: url('lava.png');
	}

  .space {
    background: url('tile123.png');
  }

	.space.basement {
		background: url('second-ground.png')
	}

	.space.dungeon {
		background: url('dungeon-ground.png');
	}

  .road {
    background: url('tile123.png');
  }

	.road.basement {
		background: url('second-ground.png')
	}

	.road.dungeon {
		background: url('dungeon-ground.png');
	}

	.door {
		background: url('steel-door.png'), url('tile106.png');
	}

	.door.basement {
		background: url('steel-door.png'), url('second-ground.png');
	}

	.door.dungeon {
		background: url('steel-door.png'), url('dungeon-ground.png');
	}

  .boss {
		background: url('vampire-cape.png'), url('dungeon-ground.png');
  }

  .helmet {
		background: url('helmet.svg'), url('tile123.png');
  }

	.helmet.basement {
		background: url('helmet.svg'), url('second-ground.png');
	}

	.necklace {
		background: url('necklace.svg'), url('tile123.png');
  }

	.necklace.basement {
		background: url('necklace.svg'), url('second-ground.png');
	}


	.sword {
		background: url('sword.svg'), url('tile123.png');
	}

	.sword.basement {
		background: url('sword.svg'), url('second-ground.png');
	}

	.armor {
		background: url('armor.svg'), url('tile123.png');
	}

	.armor.basement {
		background: url('armor.svg'), url('second-ground.png');
	}

	.shield {
		background: url('shield.svg'), url('tile123.png');
	}

	.shield.basement {
		background: url('shield.svg'), url('second-ground.png');
	}

	.bracers {
		background: url('bracers.svg'), url('tile123.png');
	}

	.bracers.basement {
		background: url('bracers.svg'), url('second-ground.png');
	}

	.daggers {
		background: url('daggers.svg'), url('tile123.png');
	}

	.daggers.basement {
		background: url('daggers.svg'), url('second-ground.png');
	}

	.ring {
		background: url('ring.svg'), url('tile123.png');
	}

	.ring.basement {
		background: url('ring.svg'), url('second-ground.png');
	}

	.pants {
		background: url('pants.svg'), url('tile123.png');
	}

	.pants.basement {
		background: url('pants.svg'), url('second-ground.png');
	}

	.leg-armor {
		background: url('leg-armor.svg'), url('tile123.png');
	}

	.leg-armor.basement {
		background: url('leg-armor.svg'), url('second-ground.png');
	}


  .pill {
		background: url('pill.png'), url('tile123.png');
  }



	.pill.basement {
		background: url('pill.png'), url('second-ground.png');
	}

  .invisible {
    background: #232323;
  }

.attack-message {
	background: red;
}

.helper-message {
	background: lightgreen;
}

.defeat-message {
  background: lightgrey;
}



/* control buttons for mobile devices */

#mobile-buttons {
  position: fixed;
  bottom: 5%;
  right: 5%;
  width: 130px;
  height: 130px;
	display: none;
}

#mobile-buttons > * {
  position: absolute;
  padding: 15px;
  background: lightgrey;
  opacity: 0.7;
  border-radius: 20%;
}


#top, #bottom {
  left: 50%;
  transform: translateX(-50%);
}

#top {
  top: 0;
}

#bottom {
  bottom: 0;
}

#left, #right {
  top: 50%;
  transform: translateY(-50%);
}

#left {
  left: 0;
}

#right {
  right: 0;
}

#mobile-buttons > *.pressed {
  background: #232323;
  color: red;
}



@media screen and (max-width: 1000px) {
	.log-info, .messages {
		width: 150px;
	}

	#gamefield-container {
		width: calc(100vw - 450px);
	}
}

@media screen and (max-width: 920px) {
	#mobile-buttons {
		display: block;
	}
}

@media screen and (max-width: 800px) {
	.log-info, .messages {
		display: none;
	}

	#gamefield-container {
		width: calc(100% - 300px);
	}
}

@media screen and (max-width: 700px) {
	aside {
		width: 250px;
	}

	#gamefield-container {
		width: calc(100vw - 250px);
	}

	#backpack {
		width: 160px;
	}

	#backpack > * {
		width: 40px;
		height: 40px;
	}

	#player-items .droppable{
		width: 40px;
		height: 40px;
		margin: 5px auto !important;
	}

	.items-flex {
		width: 200px;
		margin: 0 auto;
	}


}

@media screen and (max-width: 580px) {
	aside {
		position: fixed;
		width: 0;
		top: 0;
		left: 0;
		height: 100vh;
		z-index: 9999;
		overflow: hidden;
	}

	#gamefield-container {
		height: 100vh;
	}

	header {
		display: none;
	}

	#gamefield-container {
		width: 100vw;
	}
}

